--- a/styles.css
+++ b/styles.css
@@ -75,11 +75,8 @@ i {
     color: #fff;
 }
 
-.nombre-proyecto {
+.nombre-proyecto, .nombre-proyecto:visited  {
     text-decoration: none;
-}
-
-.nombre-proyecto:visited {
     color: #000;
 }
 
@@ -94,16 +91,21 @@ i {
     margin-bottom: 16px;
 }
 
+.tecnologias-logos {
+    margin-bottom: 0.3rem;
+}
+
 .tech-circle {
     height: 3rem;
 }
 
 .project-image {
-    height: 200px;
+    height: 300px;
+    width: 340px;
     object-fit: cover;
 }
 
-#contact, footer {
+#contact {
     background-color: #FFF2DB;
 }
 
@@ -148,7 +150,7 @@ form input:active {
 
 form textarea {
     grid-column: 1/-1;
-    width: 45%;
+    width: 100%;
     height: 20rem;
     background: transparent;
     border: 1px solid #000;
@@ -158,6 +160,22 @@ form input[type="submit"] {
     background-color: #FFAB5B;
     margin: 10px 0;
     border: 0;
+    width: 50%;
+    height: 2rem;
+    cursor: pointer;
+}
+
+.datos-finales {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    grid-column: span 2; /* Ocupa las dos columnas */
+    grid-row: span 1; /* Puede especificar cuántas filas ocupa */
+}
+
+footer {
+    background-color: #00879E;
+    padding: 1rem;
 }
 
 footer ul {
@@ -167,8 +185,18 @@ footer ul {
     padding-bottom: 10px;
 }
 
+footer ul li a {
+    display: flex;
+    align-items: center;
+}
+
 .redes-sociales {
     color: #000;
+}
+
+.redes-sociales-logo {
+    height: 3rem;
+    margin-right: 2px;
 }
 
 @media (max-width: 400px) {
@@ -183,5 +211,47 @@ footer ul {
     #welcome-section div {
         width: 100%;
     }
+
+    .project-image {
+        height: 150px;
+        width: 170px;
+        object-fit: cover;
+    }
 }
-  
+
+@media (max-width: 1010px) {
+    #projects {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width: 640px) {
+    form {
+        display: flex;
+        flex-direction: column;
+    }
+
+    input[type="text"] {
+        position: relative;
+        z-index: 2;
+        top: -9vh;
+        margin-bottom: 5px;
+    }
+
+    input[type="email"] {
+        position: relative;
+        top: -5vh;
+        z-index: 3;
+    }
+
+    label[for="email"] {
+        position: relative;
+        bottom: -13px;
+    }
+}
+
+@media (max-width: 730px) {
+    #projects {
+        grid-template-columns: 1fr;
+    }
+}
